# xgb-serving

./: CMakeLists.txt  README.md  common.cmake
apis/: estimate.pb.cc  estimate.pb.h  estimate.proto
cmd/: start.sh
server/: run_server.cc  util.cc  util.h
server/imp/: estimator_service_impl.cc  estimator_service_impl.h
test/: test.cpp
